--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -1,18 +1,25 @@
 security:
     enable_authenticator_manager: true
-    # https://symfony.com/doc/current/security.html#registering-the-user-hashing-passwords
+
     password_hashers:
         Symfony\Component\Security\Core\User\PasswordAuthenticatedUserInterface: 'auto'
-    # https://symfony.com/doc/current/security.html#loading-the-user-the-user-provider
+
     providers:
-        users_in_memory: { memory: null }
+        users_doctrine:
+            entity:
+                class: App\Entity\User
+                property: nickname
     firewalls:
         dev:
             pattern: ^/(_(profiler|wdt)|css|images|js)/
             security: false
         main:
             lazy: true
-            provider: users_in_memory
+            provider: users_doctrine
+            logout:
+                path: security_logout
+            custom_authenticators:
+                - App\Security\Guard\DefaultAuthenticator
 
             # activate different ways to authenticate
             # https://symfony.com/doc/current/security.html#the-firewall
