--- a/package.json
+++ b/package.json
@@ -3,16 +3,27 @@
         "@hotwired/stimulus": "^3.0.0",
         "@symfony/stimulus-bridge": "^3.0.0",
         "@symfony/webpack-encore": "^1.7.0",
+        "autoprefixer": "^10.4.2",
         "core-js": "^3.0.0",
+        "glob-all": "^3.2.1",
+        "path": "^0.12.7",
+        "postcss": "^8.4.7",
+        "postcss-loader": "^6.2.1",
+        "purgecss-webpack-plugin": "^4.1.3",
         "regenerator-runtime": "^0.13.2",
+        "sass": "^1.49.9",
+        "sass-loader": "^12.6.0",
         "webpack-notifier": "^1.6.0"
     },
-    "license": "UNLICENSED",
+    "license": "MIT",
     "private": true,
     "scripts": {
         "dev-server": "encore dev-server",
         "dev": "encore dev",
         "watch": "encore dev --watch",
         "build": "encore production --progress"
+    },
+    "dependencies": {
+        "bootstrap": "^5.1.3"
     }
 }
